# Hop-Decorate

./: .gitattributes  .gitignore  HopDec.py  README.md  pyproject.toml  setup.cfg  setup.py
HopDec/: ASE.py  Dimer.py  Graphs.py  HopDec.py  Input.py  Lammps.py  MD.py  Minimize.py  Model.py  NEB.py  Redecorate.py  State.py  Transitions.py  Utilities.py  Vectors.py  __init__.py  _version.py  cli.py
examples/command-line-execution/CuNi/: HopDec-config.xml
examples/interactive-mode/ASE-Structure-Generation/: HopDec-config.xml  main.ipynb
examples/interactive-mode/dimer/: HopDec-config.xml  main.ipynb
examples/interactive-mode/md-to-barriers/: HopDec-config.xml  main.ipynb
examples/interactive-mode/neb/: HopDec-config.xml  main.ipynb
examples/interactive-mode/redecorate/: HopDec-config.xml  main.ipynb
examples/main-functionality/: README
examples/main-functionality/CuNi/model-growth-canonical-labelling/: HopDec-config.xml
examples/main-functionality/CuNi/static-model-NonCanonical-labelling/: HopDec-config.xml
examples/main-functionality/Oxide/: HopDec-config.xml
examples/main-functionality/Zr/: HopDec-config.xml
mains/: HopDec-main
tests/integration/: conftest.py  test_io.py  test_minimize.py  test_neb.py
tests/unittests/: conftest.py  test_atoms.py  test_constants.py  test_graphs.py  test_input.py  test_integration.py  test_md.py  test_model.py  test_state.py  test_state_methods.py  test_transitions.py  test_utilities.py  test_vectors.py
